[tool.poetry]
name = "nhl-statistics-1"
version = "0.1.0"
description = ""
authors = ["Paula Meuronen <paula.meuronen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
